<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.edu.ifba.renatonovais.crudlivrosmobile.activities.CadastroLivroActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:paddingRight="16dp"
        tools:context="br.edu.ifba.renatonovais.crudlivrosmobile.activities.CadastroLivroActivity">


        <LinearLayout
            android:id="@+id/labels_cadastro_livro"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/titulo"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/autor"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/ano"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/isbn"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/editora"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/labels_cadastro_livro"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <EditText
                android:id="@+id/edtAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/edtIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />


            <EditText
                android:id="@+id/edtEditora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="95dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botao_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/confirmar" />

            <Button
                android:id="@+id/botao_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/botao_excluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-medium"
                android:text="@string/excluir" />
        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>